<?php
namespace DesignPatterns\Behavioral\Command;

class Receiver
{
    public function processCommand()
    {

    }
}